--- a/app/theme.css
+++ b/app/theme.css
@@ -4,7 +4,6 @@
     :host {
         --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
         --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-        --color-yellow-400: oklch(.852 .199 91.936);
         --color-gray-50: oklch(.985 .002 247.839);
         --color-gray-100: oklch(.967 .003 264.542);
         --color-gray-200: oklch(.928 .006 264.531);
@@ -12,9 +11,77 @@
         --color-gray-400: oklch(.707 .022 261.325);
         --color-gray-600: oklch(.446 .03 256.802);
         --color-gray-700: oklch(.373 .034 259.733);
+        /* 400 is regular */
+        --color-sky-100: #DAF5F0;
+        --color-sky-200: #A7DBD8;
+        --color-sky-300: #87CEEB;
+        --color-sky-400: #69D2E7;
+        --color-sky-500: #4FB3C8;
+        --color-sky-600: #3694A9;
+        --color-sky-700: #1D758A;
+
+        --color-green-100: #B5D2AD;
+        --color-green-200: #BAFCA2;
+        --color-green-300: #90EE90;
+        --color-green-400: #7FBC8C;
+        --color-green-500: #65A373;
+        --color-green-600: #4B8A5A;
+        --color-green-700: #317141;
+
+        --color-yellow-100: #FDFD96;
+        --color-yellow-200: #FFDB58;
+        --color-yellow-300: #F4D738;
+        --color-yellow-400: oklab(75.161% 0.03279 0.14852);
+        --color-yellow-500: #C98E15;
+        --color-yellow-600: #AF7C12;
+        --color-yellow-700: #956A0F;
+
+        --color-orange-100: #F8D6B3;
+        --color-orange-200: #FFA07A;
+        --color-orange-300: #FF7A5C;
+        --color-orange-400: #FF6B6B;
+        --color-orange-500: #E55050;
+        --color-orange-600: #CC3535;
+        --color-orange-700: #B21A1A;
+
+        --color-pink-100: #FCDFFF;
+        --color-pink-200: #FFC0CB;
+        --color-pink-300: #FFB2EF;
+        --color-pink-400: #FF69B4;
+        --color-pink-500: #E64D9E;
+        --color-pink-600: #CC3188;
+        --color-pink-700: #B31572;
+
+        --color-purple-100: #E3DFF2;
+        --color-purple-200: #C4A1FF;
+        --color-purple-300: #A388EE;
+        --color-purple-400: #9723C9;
+        --color-purple-500: #7E1DA6;
+        --color-purple-600: #651783;
+        --color-purple-700: #4C1160;
+
+        --color-red-100: #FEE2E2;
+        --color-red-200: #FECACA;
+        --color-red-300: #F87171;
+        --color-red-400: #EF4444;
+        --color-red-500: #DC2626;
+        --color-red-600: #B91C1C;
+        --color-red-700: #991B1B;
+
+
+        --color-blue-100: #DBEAFE;
+        --color-blue-200: #BFDBFE;
+        --color-blue-300: #93C5FD;
+        --color-blue-400: #60A5FA;
+        --color-blue-500: #3B82F6;
+        --color-blue-600: #2563EB;
+        --color-blue-700: #1D4ED8;
+
         --color-black: #000;
         --color-white: #fff;
+
         --spacing: .25rem;
+
         --container-xs: 20rem;
         --container-md: 28rem;
         --container-2xl: 42rem;
@@ -22,6 +89,7 @@
         --container-4xl: 56rem;
         --container-5xl: 64rem;
         --container-6xl: 72rem;
+
         --text-xs: .75rem;
         --text-xs--line-height: calc(1 / .75);
         --text-sm: .875rem;
@@ -30,13 +98,16 @@
         --text-lg: 1.125rem;
         --text-xl: 1.25rem;
         --text-2xl: 1.5rem;
+
         --font-weight-normal: 400;
         --font-weight-medium: 500;
+
         --tracking-tight: -.025em;
         --tracking-wide: .025em;
         --tracking-wider: .05em;
         --tracking-widest: .1em;
         --leading-relaxed: 1.625;
+
         --default-transition-duration: .15s;
         --default-transition-timing-function: cubic-bezier(.4, 0, .2, 1);
         --default-font-family: var(--font-sans);
