--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
-@import "./theme.css";
+@import 'tailwindcss';
+@import './theme.css';
 
 @layer base {
   * {
@@ -11,4 +11,8 @@
     background-color: var(--background);
     color: var(--foreground);
   }
+}
+
+@utility rounded {
+  border-radius: 0.5rem;
 }
