--- a/src/app/theme.css
+++ b/src/app/theme.css
@@ -1,172 +1,138 @@
 @theme {
-    /* Colors */
-    --color-gray-50: oklch(.985 .002 247.839);
-    --color-gray-100: oklch(.967 .003 264.542);
-    --color-gray-200: oklch(.928 .006 264.531);
-    --color-gray-300: oklch(.872 .01 258.338);
-    --color-gray-400: oklch(.707 .022 261.325);
-    --color-gray-600: oklch(.446 .03 256.802);
-    --color-gray-700: oklch(.373 .034 259.733);
+  /* Colors */
+  --color-gray-50: oklch(0.985 0.002 247.839);
+  --color-gray-100: oklch(0.967 0.003 264.542);
+  --color-gray-200: oklch(0.928 0.006 264.531);
+  --color-gray-300: oklch(0.872 0.01 258.338);
+  --color-gray-400: oklch(0.707 0.022 261.325);
+  --color-gray-600: oklch(0.446 0.03 256.802);
+  --color-gray-700: oklch(0.373 0.034 259.733);
 
+  --color-black: #000;
+  --color-white: #fff;
 
-    --color-black: #000;
-    --color-white: #fff;
+  /* Semantic Colors Mapping */
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-ring: var(--ring);
+  --color-chart-1: var(--chart-1);
+  --color-chart-2: var(--chart-2);
+  --color-chart-3: var(--chart-3);
+  --color-chart-4: var(--chart-4);
+  --color-chart-5: var(--chart-5);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
 
-    /* Semantic Colors Mapping */
-    --color-background: var(--background);
-    --color-foreground: var(--foreground);
-    --color-card: var(--card);
-    --color-card-foreground: var(--card-foreground);
-    --color-popover: var(--popover);
-    --color-popover-foreground: var(--popover-foreground);
-    --color-primary: var(--primary);
-    --color-primary-foreground: var(--primary-foreground);
-    --color-secondary: var(--secondary);
-    --color-secondary-foreground: var(--secondary-foreground);
-    --color-muted: var(--muted);
-    --color-muted-foreground: var(--muted-foreground);
-    --color-accent: var(--accent);
-    --color-accent-foreground: var(--accent-foreground);
-    --color-destructive: var(--destructive);
-    --color-destructive-foreground: var(--destructive-foreground);
-    --color-border: var(--border);
-    --color-input: var(--input);
-    --color-ring: var(--ring);
-    --color-chart-1: var(--chart-1);
-    --color-chart-2: var(--chart-2);
-    --color-chart-3: var(--chart-3);
-    --color-chart-4: var(--chart-4);
-    --color-chart-5: var(--chart-5);
-    --color-sidebar: var(--sidebar);
-    --color-sidebar-foreground: var(--sidebar-foreground);
-    --color-sidebar-primary: var(--sidebar-primary);
-    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
-    --color-sidebar-accent: var(--sidebar-accent);
-    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
-    --color-sidebar-border: var(--sidebar-border);
-    --color-sidebar-ring: var(--sidebar-ring);
+  /* Spacing */
+  --spacing: 0.25rem;
 
-    /* Spacing */
-    --spacing: 0.25rem;
+  /* Breakpoints */
+  --breakpoint-xs: 20rem;
+  --breakpoint-md: 28rem;
+  --breakpoint-2xl: 42rem;
+  --breakpoint-3xl: 48rem;
+  --breakpoint-4xl: 56rem;
+  --breakpoint-5xl: 64rem;
+  --breakpoint-6xl: 72rem;
 
-    /* Breakpoints */
-    --breakpoint-xs: 20rem;
-    --breakpoint-md: 28rem;
-    --breakpoint-2xl: 42rem;
-    --breakpoint-3xl: 48rem;
-    --breakpoint-4xl: 56rem;
-    --breakpoint-5xl: 64rem;
-    --breakpoint-6xl: 72rem;
+  /* Typography */
+  --text-xs: 0.75rem;
+  --text-xs--line-height: calc(1 / 0.75);
+  --text-sm: 0.875rem;
+  --text-sm--line-height: calc(1.25 / 0.875);
+  --text-base: 1rem;
+  --text-lg: 1.125rem;
+  --text-xl: 1.25rem;
+  --text-2xl: 1.5rem;
 
-    /* Typography */
-    --text-xs: .75rem;
-    --text-xs--line-height: calc(1 / .75);
-    --text-sm: .875rem;
-    --text-sm--line-height: calc(1.25 / .875);
-    --text-base: 1rem;
-    --text-lg: 1.125rem;
-    --text-xl: 1.25rem;
-    --text-2xl: 1.5rem;
+  --font-weight-normal: 400;
+  --font-weight-medium: 500;
 
-    --font-weight-normal: 400;
-    --font-weight-medium: 500;
+  --tracking-tight: -0.025em;
+  --tracking-wide: 0.025em;
+  --tracking-wider: 0.05em;
+  --tracking-widest: 0.1em;
+  --leading-relaxed: 1.625;
 
-    --tracking-tight: -.025em;
-    --tracking-wide: .025em;
-    --tracking-wider: .05em;
-    --tracking-widest: .1em;
-    --leading-relaxed: 1.625;
+  --default-transition-duration: 0.15s;
+  --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-    --default-transition-duration: .15s;
-    --default-transition-timing-function: cubic-bezier(.4, 0, .2, 1);
+  --font-sans:
+    ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+    'Segoe UI Symbol', 'Noto Color Emoji';
+  --font-mono:
+    ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono',
+    'Courier New', monospace;
 
-    --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-
-    /* Radius */
-    --radius-lg: var(--radius);
-    --radius-md: calc(var(--radius) - 2px);
-    --radius-sm: calc(var(--radius) - 4px);
+  /* Radius */
+  --radius-lg: var(--radius);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-sm: calc(var(--radius) - 4px);
 }
 
 :root {
-    --font-size: 16px;
-    --background: #fff;
-    --foreground: oklch(.145 0 0);
-    --card: #fff;
-    --card-foreground: oklch(.145 0 0);
-    --popover: oklch(1 0 0);
-    --popover-foreground: oklch(.145 0 0);
-    --primary: #030213;
-    --primary-foreground: oklch(1 0 0);
-    --secondary: oklch(.95 .0058 264.53);
-    --secondary-foreground: #030213;
-    --muted: #ececf0;
-    --muted-foreground: #717182;
-    --accent: #e9ebef;
-    --accent-foreground: #030213;
-    --destructive: #d4183d;
-    --destructive-foreground: #fff;
-    --border: #0000001a;
-    --input: transparent;
-    --input-background: #f3f3f5;
-    --switch-background: #cbced4;
-    --font-weight-medium: 700;
-    --font-weight-normal: 600;
-    --ring: oklch(.708 0 0);
-    --chart-1: oklch(.646 .222 41.116);
-    --chart-2: oklch(.6 .118 184.704);
-    --chart-3: oklch(.398 .07 227.392);
-    --chart-4: oklch(.828 .189 84.429);
-    --chart-5: oklch(.769 .188 70.08);
-    --radius: .625rem;
-    --sidebar: oklch(.985 0 0);
-    --sidebar-foreground: oklch(.145 0 0);
-    --sidebar-primary: #030213;
-    --sidebar-primary-foreground: oklch(.985 0 0);
-    --sidebar-accent: oklch(.97 0 0);
-    --sidebar-accent-foreground: oklch(.205 0 0);
-    --sidebar-border: oklch(.922 0 0);
-    --sidebar-ring: oklch(.708 0 0);
-    --text-2xl: 3rem;
-    --text-xl: 2rem;
-    --text-lg: 1.5rem;
-    --text-base: 1rem;
-}
-
-.dark {
-    --background: oklch(.145 0 0);
-    --foreground: oklch(.985 0 0);
-    --card: oklch(.145 0 0);
-    --card-foreground: oklch(.985 0 0);
-    --popover: oklch(.145 0 0);
-    --popover-foreground: oklch(.985 0 0);
-    --primary: oklch(.985 0 0);
-    --primary-foreground: oklch(.205 0 0);
-    --secondary: oklch(.269 0 0);
-    --secondary-foreground: oklch(.985 0 0);
-    --muted: oklch(.269 0 0);
-    --muted-foreground: oklch(.708 0 0);
-    --accent: oklch(.269 0 0);
-    --accent-foreground: oklch(.985 0 0);
-    --destructive: oklch(.396 .141 25.723);
-    --destructive-foreground: oklch(.637 .237 25.331);
-    --border: oklch(.269 0 0);
-    --input: oklch(.269 0 0);
-    --ring: oklch(.439 0 0);
-    --font-weight-medium: 500;
-    --font-weight-normal: 400;
-    --chart-1: oklch(.488 .243 264.376);
-    --chart-2: oklch(.696 .17 162.48);
-    --chart-3: oklch(.769 .188 70.08);
-    --chart-4: oklch(.627 .265 303.9);
-    --chart-5: oklch(.645 .246 16.439);
-    --sidebar: oklch(.205 0 0);
-    --sidebar-foreground: oklch(.985 0 0);
-    --sidebar-primary: oklch(.488 .243 264.376);
-    --sidebar-primary-foreground: oklch(.985 0 0);
-    --sidebar-accent: oklch(.269 0 0);
-    --sidebar-accent-foreground: oklch(.985 0 0);
-    --sidebar-border: oklch(.269 0 0);
-    --sidebar-ring: oklch(.439 0 0);
+  --font-size: 16px;
+  --background: #fff;
+  --foreground: oklch(0.145 0 0);
+  --card: #fff;
+  --card-foreground: oklch(0.145 0 0);
+  --popover: oklch(1 0 0);
+  --popover-foreground: oklch(0.145 0 0);
+  --primary: #030213;
+  --primary-foreground: oklch(1 0 0);
+  --secondary: oklch(0.95 0.0058 264.53);
+  --secondary-foreground: #030213;
+  --muted: #ececf0;
+  --muted-foreground: #717182;
+  --accent: #e9ebef;
+  --accent-foreground: #030213;
+  --destructive: #d4183d;
+  --destructive-foreground: #fff;
+  --border: #0000001a;
+  --input: transparent;
+  --input-background: #f3f3f5;
+  --switch-background: #cbced4;
+  --font-weight-medium: 700;
+  --font-weight-normal: 600;
+  --ring: oklch(0.708 0 0);
+  --chart-1: oklch(0.646 0.222 41.116);
+  --chart-2: oklch(0.6 0.118 184.704);
+  --chart-3: oklch(0.398 0.07 227.392);
+  --chart-4: oklch(0.828 0.189 84.429);
+  --chart-5: oklch(0.769 0.188 70.08);
+  --radius: 0.625rem;
+  --sidebar: oklch(0.985 0 0);
+  --sidebar-foreground: oklch(0.145 0 0);
+  --sidebar-primary: #030213;
+  --sidebar-primary-foreground: oklch(0.985 0 0);
+  --sidebar-accent: oklch(0.97 0 0);
+  --sidebar-accent-foreground: oklch(0.205 0 0);
+  --sidebar-border: oklch(0.922 0 0);
+  --sidebar-ring: oklch(0.708 0 0);
+  --text-2xl: 3rem;
+  --text-xl: 2rem;
+  --text-lg: 1.5rem;
+  --text-base: 1rem;
 }
