--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,11 +14,19 @@
 }
 
 @layer components {
+  .rounded {
+    border-radius: var(--radius);
+  }
   .card {
     @apply overflow-hidden border-6 border-black bg-white shadow-[8px_8px_0px_0px_rgba(0,0,0,1)];
     border-radius: var(--radius);
   }
-  .rounded {
+  .border-box {
+    @apply border-4 border-black;
+    border-radius: var(--radius);
+  }
+  .border-box-center {
+    @apply flex items-center justify-center border-4 border-black;
     border-radius: var(--radius);
   }
 }
